--- a/src/sass/pages/_take-order.scss
+++ b/src/sass/pages/_take-order.scss
@@ -4,13 +4,19 @@ body {
   border: 0;
   margin: 0;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     background-image: url(../images/take-order/bg_tab.jpg);
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     background-image: url(../images/take-order/bg_desktop.jpg);
   }
+}
+
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .no-scroll {
@@ -23,16 +29,16 @@ body {
   padding: 0 16px;
   margin: 0 auto;
 
-  @media screen and (min-width: 320px) {
-    width: 320px;
+  @include media-mobile {
+    width: 480px;
   }
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     padding-top: 120px;
     width: 768px;
     padding: 0 40px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     padding-top: 120px;
     width: 1280px;
   }
@@ -42,13 +48,13 @@ body {
   @include font(600, 24px, 1.16);
   color: $primaryTextColor;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     margin-left: 83px;
     @include font(500, 56px, 1.16);
   }
 }
 
-@media screen and (min-width: 1280px) {
+@include media-desktop {
   .to-product-info {
     position: relative;
     display: flex;
@@ -63,38 +69,39 @@ body {
   @include font(600, 32px, 1.19);
   color: $primaryTextColor;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     margin-bottom: 24px;
     @include font(600, 56px, 1.18);
   }
 
-  @media screen and (min-width: 768px) {
+  @include media-desktop {
     margin-bottom: 32px;
   }
 }
 
 .product {
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     display: flex;
     align-items: center;
     margin-bottom: 24px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     margin-bottom: 0;
   }
 }
 
 .to-image-main {
   margin-bottom: 16px;
+  width: 100%;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     margin-bottom: 0;
     width: 387px;
     height: 346px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     position: absolute;
     top: 0;
     left: 0;
@@ -102,11 +109,11 @@ body {
 }
 
 .to-img-main {
-  width: 288px;
-  height: 254px;
+  // width: 100%;
+  // height: 354px;
   border-radius: 12px;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     min-width: 387px;
     min-height: 346px;
   }
@@ -118,13 +125,13 @@ body {
   width: 100%;
   margin-bottom: 16px;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     display: block;
     padding-left: 40px;
     margin-bottom: 0;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     display: flex;
     justify-content: space-between;
     padding-left: 0;
@@ -138,12 +145,12 @@ body {
   text-decoration-line: line-through;
   color: #8d9289;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     margin-bottom: 46px;
     font-size: 24px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     margin-bottom: 0;
     margin-right: 40px;
   }
@@ -153,36 +160,40 @@ body {
   @include font(600, 32px, 1);
   color: $accentTextColor;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     font-size: 48px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     margin-right: 320px;
   }
+}
+
+.to-images {
+  width: 100%;
 }
 
 .to-images-list {
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
-  width: 100%;
-  height: 62px;
+  gap: 16px;
+  width: auto;
   margin-bottom: 32px;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     height: 160px;
     margin-bottom: 48px;
     gap: 24px;
   }
+  @include media-desktop {
+    margin-left: 500px;
+  }
 }
 
 .to-image-img {
-  height: 62px;
-  width: 60px;
   border-radius: 6px;
-
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     height: 160px;
     width: 154px;
   }
@@ -191,13 +202,13 @@ body {
 .to-contact {
   width: 100%;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     display: flex;
     align-items: center;
     flex-direction: column;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     display: block;
   }
 }
@@ -208,12 +219,12 @@ body {
   color: $accentTextColor;
   margin-bottom: 16px;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     font-size: 36px;
     padding-left: 49px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     padding-left: 0;
   }
 }
@@ -233,7 +244,7 @@ input:valid {
 }
 
 .to-form-full {
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     display: flex;
     justify-content: space-between;
   }
@@ -243,10 +254,10 @@ input:valid {
   position: relative;
   margin-bottom: 40px;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     width: 100%;
   }
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     width: 590px;
   }
 }
@@ -262,7 +273,7 @@ input:valid {
   @include font(400, 16px, 1.25);
   color: $primaryTextColor;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     font-size: 18px;
     line-height: 1.1;
   }
@@ -277,7 +288,7 @@ input:valid {
   @include font(400, 16px, 1.25);
   color: $primaryTextColor;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     font-size: 18px;
     line-height: 1.1;
   }
@@ -326,7 +337,7 @@ input:valid {
   order: 0;
   border-bottom: 1px solid $accentTextColor;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     width: 100%;
     font-size: 18px;
     line-height: 1.1;
@@ -397,7 +408,7 @@ input:valid {
   background-color: transparent;
   color: $primaryTextColor;
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     margin-left: 20px;
   }
 }
@@ -412,11 +423,11 @@ input:valid {
   background-color: transparent;
   border-radius: 0px;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     height: 256px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     width: 589px;
     margin-bottom: 48px;
     margin-left: 20px;
@@ -428,7 +439,7 @@ input:valid {
 }
 
 .to-form-btn-grp {
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     display: flex;
     margin-bottom: 120px;
     justify-content: center;
@@ -447,12 +458,12 @@ input:valid {
   border-radius: 16px;
   cursor: pointer;
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     font-size: 32px;
     margin-bottom: 24px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     margin: 0;
   }
 }
@@ -464,11 +475,11 @@ input:valid {
   padding: 16px 42px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     padding: 16px 64px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     margin-bottom: 0;
     padding: 16px 64px;
   }
@@ -487,12 +498,12 @@ input:valid {
   padding: 16px 36px;
   transition: box-shadow 100ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (min-width: 768px) {
+  @include media-tablet {
     padding: 16px 52px;
     margin-bottom: 120px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @include media-desktop {
     margin-bottom: 0;
   }
 }
