--- a/src/sass/pages/_mobile-menu.scss
+++ b/src/sass/pages/_mobile-menu.scss
@@ -1,9 +1,15 @@
-.mobile-menu-container {
+.mobile-menu {
    @media screen and (min-width: $desktopBreakpoint) {
       display: none;
    }
+}
+.mobile-menu-main {
    width: 100vw;
    height: 100vh;
+   padding-top: 64px;
+   @media screen and (min-width: $tabletBreakpoint) {
+      padding-top: 120px;
+   }
 
    background-image: url(../images/mobile-menu/bg-mobile.jpg);
    @media (min-device-pixel-ratio: 2),
@@ -22,13 +28,76 @@
       }
    }
 }
-.page-list {
+
+.mobile-menu-header {
+   position: relative;
    display: flex;
    align-items: center;
-   margin-top: 64px;
+   justify-content: space-between;
+
+   padding: 24px 16px;
    @media screen and (min-width: $tabletBreakpoint) {
-      margin-top: 120px;
+      padding: 40px;
    }
+
+   background-color: $backgroundColor;
+   box-shadow: 0px 4px 10px rgba(97, 162, 58, 0.2), 0px 4px 50px rgba(94, 236, 54, 0.5),
+      0px 4px 4px rgba(17, 168, 26, 0.2);
+}
+.logo {
+   display: block;
+   width: 115px;
+   @media screen and (min-width: $tabletBreakpoint) {
+      width: 156px;
+   }
+
+   font-family: "Roboto";
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 1.2;
+   text-transform: uppercase;
+   text-align: center;
+
+   color: $primaryТextСolor;
+}
+.mobile-menu-close {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+
+   transform: translate(-50%, -25%);
+   fill: $accentTextColor;
+   cursor: pointer;
+}
+.mobile-menu-button {
+   display: none;
+
+   margin-top: 16px;
+
+   @media screen and (min-width: 768px) {
+      display: block;
+      padding: 9px 18px;
+      font-family: "Roboto";
+
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.6;
+
+      text-align: right;
+      letter-spacing: -0.03em;
+
+      color: #000000;
+
+      background-color: $accentTextColor;
+      border-radius: 16px;
+      border: none;
+      cursor: pointer;
+   }
+}
+.page-list {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 .page {
    &:not(:last-child) {
@@ -37,6 +106,7 @@
 }
 
 .page-link {
+   display: block;
    font-family: "Roboto";
    font-weight: 700;
    font-size: 24px;
