--- a/src/sass/pages/_main.scss
+++ b/src/sass/pages/_main.scss
@@ -1,5 +1,6 @@
 // Це головний файл, що робить імпорти у цій папці
 
+@import 'header';
 @import 'accessories';
 @import 'blog-article';
 @import 'blog';
