--- a/src/sass/pages/_take-order.scss
+++ b/src/sass/pages/_take-order.scss
@@ -27,6 +27,7 @@ body {
   padding-top: 40px;
   width: 100%;
   padding: 0 16px;
+  padding-top: 40px;
   margin: 0 auto;
 
   @include media-mobile {
