final fix header + mobile menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,52 +1,57 @@
 <section class="header">
-    <div class="header-container container">
-        <a href="./index.html" class="header-logo">SHOP FOR GAMERS</a>
-        <nav class="navigation">
-            <ul class="header-menu list header-menu-connect">
-                <li class="header-menu-item">
-                    <a href="#" class="header-menu-link link">Accessories</a>
-                </li>
-                <li class="header-menu-item">
-                    <a href="#" class="header-menu-link link">Contact</a>
-                </li>
-                <li class="header-menu-item">
-                    <a href="#" class="header-menu-link link">Blog</a>
-                </li>
-            </ul>
-        </nav>
+  <div class="header-container container">
+    <a href="./index.html" class="header-logo">SHOP FOR GAMERS</a>
+    <nav class="navigation">
+      <ul class="header-menu list header-menu-connect">
+        <li class="header-menu-item">
+          <a href="#" class="header-menu-link link">Accessories</a>
+        </li>
+        <li class="header-menu-item">
+          <a href="#" class="header-menu-link link">Contact</a>
+        </li>
+        <li class="header-menu-item">
+          <a href="#" class="header-menu-link link">Blog</a>
+        </li>
+      </ul>
+    </nav>
 
-        <button type="button" class="btn-menu-open" data-menu-open>
-            <svg class="btn-menu-icon" width="54" height="36" aria-label="Мобильное меню">
-                <use href="./images/icons.svg#icon-menu-open-burger"></use>
-            </svg>
-        </button>
+    <button type="button" class="btn-menu-open" data-menu-open>
+      <svg
+        class="btn-menu-icon"
+        width="54"
+        height="36"
+        aria-label="Мобильное меню"
+      >
+        <use href="./images/icons.svg#icon-menu-open-burger"></use>
+      </svg>
+    </button>
 
-        <a href="#" class="header-btn">Shop now</a>
+    <button type="button" class="btn-menu-close is-hidden" data-menu-close>
+      <svg
+        class="btn-menu-icon"
+        width="54"
+        height="36"
+        aria-label="Мобильное меню"
+      >
+        <use href="./images/icons.svg#icon-icons-cross"></use>
+      </svg>
+    </button>
 
-
+    <a href="#" class="header-btn">Shop now</a>
+  </div>
+  <div class="header-mob-menu container is-hidden" data-menu>
+    <div class="mob-container">
+      <ul class="mobile-menu">
+        <li class="mobil-menu-item">
+          <a href="./index.html" class="mobil-menu-link link">Accessories</a>
+        </li>
+        <li class="mobil-menu-item">
+          <a href="#" class="mobil-menu-link link">Contact</a>
+        </li>
+        <li class="mobil-menu-item">
+          <a href="#" class="mobil-menu-link link">Blog</a>
+        </li>
+      </ul>
     </div>
-    <div class="header-mob-menu container is-hidden" data-menu>
-        <div class="mob-container">
-            <button type="button" class="btn-menu-close" data-menu-close>
-                <svg class="btn-menu-icon" width="54" height="36" aria-label="Мобильное меню">
-                    <use href="./images/icons.svg#icon-icons-cross"></use>
-                </svg>
-            </button>
-            <ul class="mobile-menu">
-                <li class="mobil-menu-item">
-                    <a href="./index.html" class="mobil-menu-link link">Accessories</a>
-                </li>
-                <li class="mobil-menu-item">
-                    <a href="#" class="mobil-menu-link link">Contact</a>
-                </li>
-                <li class="mobil-menu-item">
-                    <a href="#" class="mobil-menu-link link">Blog</a>
-                </li>
-            </ul>
-        </div>
-
-
-
-    </div>
-
+  </div>
 </section>
