--- a/src/sass/pages/_accessories.scss
+++ b/src/sass/pages/_accessories.scss
@@ -1,6 +1,6 @@
 .accessories {
-    padding-top: 40px;
-    padding-bottom: 50px;
+  padding-top: 40px;
+  padding-bottom: 50px;
   background-image: url(../images/bg-access-mobl-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -33,7 +33,7 @@
 
 .accessories-list-btn {
   list-style: none;
-  
+
   margin-bottom: 30px;
   display: flex;
   flex-wrap: wrap;
@@ -41,7 +41,6 @@
   gap: 24px;
 
   @include media-tablet {
-   
     margin-bottom: 72px;
     gap: 44px;
   }
@@ -137,6 +136,9 @@
   padding: 16px;
   top: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
