--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,19 +3,20 @@
 }
 
 .section-hero {
-  background-image: url('../images/hero/keyboard.webp'),
-    url('../images/hero/hero.webp');
+  position: relative;
+
+  background-image: url('../images/hero/hero.webp');
   background-repeat: no-repeat;
   background-position: center right -80px;
-  background-size: 150px, cover;
+  background-size: cover;
 
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    background-image: url('../images/hero/keyboard@2x.webp'),
-      url('../images/hero/hero@2x.webp');
-    background-position: center right -80px;
-  }
+  // @media (min-device-pixel-ratio: 2),
+  //   (min-resolution: 192dpi),
+  //   (min-resolution: 2dppx) {
+  //   background-image: url('../images/hero/keyboard@2x.webp'),
+  //     url('../images/hero/hero@2x.webp');
+  //   background-position: center right -80px;
+  // }
 
   // * if no webp support in browser, load jpg. Check by` checkWebpSupport.js
   // TODO: insert JPG version
@@ -28,6 +29,13 @@
   //       background-image: url('../images/hero/hero@2x.jpg');
   //     }
   //   }
+}
+
+.hero-bg-second-layer {
+  background-image: url('../images/hero/keyboard.webp');
+  background-repeat: no-repeat;
+  background-position: 150px 500px;
+  // background-size: ;
 }
 
 .hero-content {
