done work with sass

--- a/src/sass/layout/_buttons.scss
+++ b/src/sass/layout/_buttons.scss
@@ -25,6 +25,12 @@
     box-shadow: 0px 8px 20px rgba(134, 229, 67, 0.5),
       0px 4px 10px rgba(255, 255, 255, 0.1);
   }
+
+  @media screen and (max-width: 479px) {
+    max-width: 75%;
+
+    font-size: calc(1.25vmin * 5);
+  }
 }
 
 .filter-button {
