--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<section class="header">
+<header class="header">
   <div class="header-container container">
     <a href="./index.html" class="header-logo">SHOP FOR GAMERS</a>
     <nav class="navigation">
@@ -54,4 +54,4 @@
       </ul>
     </div>
   </div>
-</section>
+</header>
