--- a/src/partials/index-slider.html
+++ b/src/partials/index-slider.html
@@ -1,8 +1,24 @@
-<section class="section glide">
+<section class="section index-slider glide">
   <div class="index-slider-content glide__track" data-glide-el="track">
     <ul class="index-slider-list glide__slides">
       <li class="index-slider-item glide__slide">
         <picture>
+          <source
+            srcset="
+              ./images/index-slider/item1-desktop.webp    1x,
+              ./images/index-slider/item1-desktop@2x.webp 2x
+            "
+            type="image/webp"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/index-slider/item1-tablet.webp    1x,
+              ./images/index-slider/item1-tablet@2x.webp 2x
+            "
+            type="image/webp"
+            media="(min-width: 768px)"
+          />
           <source
             srcset="
               ./images/index-slider/item1.webp    1x,
@@ -12,17 +28,56 @@
           />
           <source
             srcset="
+              ./images/index-slider/item1-desktop.jpg    1x,
+              ./images/index-slider/item1-desktop@2x.jpg 2x
+            "
+            type="image/jpeg"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/index-slider/item1-tablet.jpg    1x,
+              ./images/index-slider/item1-tablet@2x.jpg 2x
+            "
+            type="image/jpeg"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/index-slider/item1.jpg    1x,
               ./images/index-slider/item1@2x.jpg 2x
             "
-            type="image/webp"
+            type="image/jpeg"
           />
           <img src="./images/index-slider/item1.jpg" alt="Ігрова клавіатура" />
         </picture>
-        <span class="index-slider-text"></span>
+        <span
+          class="index-slider-text index-slider-text-gr1 index-slider-text-mobile"
+          >One place for&nbsp;everything&nbsp;you&nbsp;want</span
+        >
+        <span
+          class="index-slider-text index-slider-text-gr1 index-slider-text-default"
+          >One place for everything you want</span
+        >
       </li>
       <li class="index-slider-item glide__slide">
         <picture>
+          <source
+            srcset="
+              ./images/index-slider/item2-desktop.webp    1x,
+              ./images/index-slider/item2-desktop@2x.webp 2x
+            "
+            type="image/webp"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/index-slider/item2-tablet.webp    1x,
+              ./images/index-slider/item2-tablet@2x.webp 2x
+            "
+            type="image/webp"
+            media="(min-width: 768px)"
+          />
           <source
             srcset="
               ./images/index-slider/item2.webp    1x,
@@ -32,17 +87,52 @@
           />
           <source
             srcset="
+              ./images/index-slider/item2-desktop.jpg    1x,
+              ./images/index-slider/item2-desktop@2x.jpg 2x
+            "
+            type="image/jpeg"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/index-slider/item2-tablet.jpg    1x,
+              ./images/index-slider/item2-tablet@2x.jpg 2x
+            "
+            type="image/jpeg"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/index-slider/item2.jpg    1x,
               ./images/index-slider/item2@2x.jpg 2x
             "
-            type="image/webp"
+            type="image/jpeg"
           />
           <img src="./images/index-slider/item2.jpg" alt="Ігрова клавіатура" />
         </picture>
-        <span class="index-slider-text"></span>
+        <span class="index-slider-text index-slider-text-gr2"
+          >Best shop for buying
+          <span class="uppercase">gaming products</span></span
+        >
       </li>
       <li class="index-slider-item glide__slide">
         <picture>
+          <source
+            srcset="
+              ./images/index-slider/item3-desktop.webp    1x,
+              ./images/index-slider/item3-desktop@2x.webp 2x
+            "
+            type="image/webp"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/index-slider/item3-tablet.webp    1x,
+              ./images/index-slider/item3-tablet@2x.webp 2x
+            "
+            type="image/webp"
+            media="(min-width: 768px)"
+          />
           <source
             srcset="
               ./images/index-slider/item3.webp    1x,
@@ -52,25 +142,39 @@
           />
           <source
             srcset="
+              ./images/index-slider/item3-desktop.jpg    1x,
+              ./images/index-slider/item3-desktop@2x.jpg 2x
+            "
+            type="image/jpeg"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/index-slider/item3-tablet.jpg    1x,
+              ./images/index-slider/item3-tablet@2x.jpg 2x
+            "
+            type="image/jpeg"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/index-slider/item3.jpg    1x,
               ./images/index-slider/item3@2x.jpg 2x
             "
-            type="image/webp"
+            type="image/jpeg"
           />
           <img src="./images/index-slider/item3.jpg" alt="Ігрова клавіатура" />
         </picture>
-        <span class="index-slider-text"></span>
+        <span class="index-slider-text index-slider-text-gr3"
+          >High-quality products in&nbsp;lowest price</span
+        >
       </li>
     </ul>
+
+    <div class="glide__bullets" data-glide-el="controls[nav]">
+      <button class="glide__bullet" data-glide-dir="=0"></button>
+      <button class="glide__bullet" data-glide-dir="=1"></button>
+      <button class="glide__bullet" data-glide-dir="=2"></button>
+    </div>
   </div>
 </section>
-
-<div class="glide">
-  <div class="glide__track" data-glide-el="track">
-    <ul class="glide__slides">
-      <li class="glide__slide">0</li>
-      <li class="glide__slide">1</li>
-      <li class="glide__slide">2</li>
-    </ul>
-  </div>
-</div>
