updated basic styles

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 
 // ! Modern normalize стоїть виключно на початку, щоби перебивання стилів працювало правильно
 @import '~node_modules/modern-normalize/modern-normalize.css';
+@import 'node_modules/@glidejs/glide/src/assets/sass/glide.core';
 
 // ! Змінні та база також зверху
 @import 'base/main';
