--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,16 +12,16 @@
           <section>
             <ul class="footer-list">
               <li class="footer-item">
-                <a class="footer-list-link" href="">Accessories</a>
+                <a class="footer-list-link" href="./accessories.html">Accessories</a>
               </li>
               <li class="footer-item">
-                <a class="footer-list-link" href="">Take order</a>
+                <a class="footer-list-link" href="./take-order.html">Take order</a>
               </li>
               <li class="footer-item">
-                <a class="footer-list-link" href="">Contact</a>
+                <a class="footer-list-link" href="./contacts.html">Contacts</a>
               </li>
               <li class="footer-item">
-                <a class="footer-list-link" href="">Blog</a>
+                <a class="footer-list-link" href="./blog.html">Blog</a>
               </li>
             </ul>
           </section>
@@ -29,21 +29,21 @@
           <section class="footer-social">
             <ul class="footer-soc-list">
               <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
+                <a class="footer-soc-link" href="./index.html">
                   <svg class="footer-soc-icon" width="12" height="12">
                      <use href="./images/icons.svg#icon-social-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
+                <a class="footer-soc-link" href="./index.html">
                   <svg class="footer-soc-icon" width="12" height="12">
                      <use href="./images/icons.svg#icon-social-youtube"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-soc-item">
-                <a class="footer-soc-link" href="">
+                <a class="footer-soc-link" href="./index.html">
                   <svg class="footer-soc-icon" width="12" height="12">
                      <use href="./images/icons.svg#icon-social-facebook"></use>
                   </svg>
