--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,13 +4,15 @@
     <nav class="navigation">
       <ul class="header-menu list header-menu-connect">
         <li class="header-menu-item">
-          <a href="#" class="header-menu-link link">Accessories</a>
+          <a href="./accessories.html" class="header-menu-link link"
+            >Accessories</a
+          >
         </li>
         <li class="header-menu-item">
-          <a href="#" class="header-menu-link link">Contact</a>
+          <a href="./contacts.html" class="header-menu-link link">Contact</a>
         </li>
         <li class="header-menu-item">
-          <a href="#" class="header-menu-link link">Blog</a>
+          <a href="./blog.html" class="header-menu-link link">Blog</a>
         </li>
       </ul>
     </nav>
@@ -37,19 +39,21 @@
       </svg>
     </button>
 
-    <a href="#" class="header-btn">Shop now</a>
+    <a href="./accessories.html" class="header-btn">Shop now</a>
   </div>
   <div class="header-mob-menu container is-hidden" data-menu>
     <div class="mob-container">
       <ul class="mobile-menu">
         <li class="mobil-menu-item">
-          <a href="./index.html" class="mobil-menu-link link">Accessories</a>
+          <a href="./accessories.html" class="mobil-menu-link link"
+            >Accessories</a
+          >
         </li>
         <li class="mobil-menu-item">
-          <a href="#" class="mobil-menu-link link">Contact</a>
+          <a href="./contacts.html" class="mobil-menu-link link">Contact</a>
         </li>
         <li class="mobil-menu-item">
-          <a href="#" class="mobil-menu-link link">Blog</a>
+          <a href="./blog.html" class="mobil-menu-link link">Blog</a>
         </li>
       </ul>
     </div>
