--- a/src/partials/index-slider.html
+++ b/src/partials/index-slider.html
@@ -1,4 +1,5 @@
 <section class="section index-slider glide">
+  <h2 class="visually-hidden">Latest information</h2>
   <div class="index-slider-content glide__track" data-glide-el="track">
     <ul class="index-slider-list glide__slides">
       <li class="index-slider-item glide__slide">
