--- a/src/sass/pages/_accessories.scss
+++ b/src/sass/pages/_accessories.scss
@@ -1,5 +1,5 @@
 .accessories {
-  padding-top: 40px;
+  // padding-top: 40px;
   padding-bottom: 50px;
   background-image: url(../images/bg-access-mobl-1x.jpg);
   background-repeat: no-repeat;
@@ -12,7 +12,7 @@
     background-image: url(../images/bg-access-mobl-2x.jpg);
   }
   @include media-tablet {
-    padding-top: 120px;
+    // padding-top: 120px;
     padding-bottom: 120px;
     background-image: url(../images/bg-access-tabl-1x.jpg);
     @media (min-device-pixel-ratio: 2),
