--- a/src/partials/accessories.html
+++ b/src/partials/accessories.html
@@ -30,16 +30,19 @@
 
     <ul class="accessories-list">
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-1-1x.jpg 1x, ../images/img-1-2x.jpg 2x"
+                srcset="
+                  /src/images/img-1-1x.jpg 1x,
+                  /src/images/img-1-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
               <img
                 class="accessories-img"
-                src="../images/img-1-1x.jpg"
+                src="/src/images/img-1-1x.jpg"
                 alt="Xiberia K9 PRO PC Headset"
                 width="285"
                 height="276"
@@ -83,17 +86,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-2-1x.jpg 1x, ../images/img-2-2x.jpg 2x"
+                srcset="
+                  /src/images/img-2-1x.jpg 1x,
+                  /src/images/img-2-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-2-1x.jpg"
+                src="/src/images/img-2-1x.jpg"
                 alt="G95 Light Surround Gaming Headset"
                 width="285"
                 height="276"
@@ -134,17 +140,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-3-1x.jpg 1x, ../images/img-3-2x.jpg 2x"
+                srcset="
+                  /src/images/img-3-1x.jpg 1x,
+                  /src/images/img-3-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-3-1x.jpg"
+                src="/src/images/img-3-1x.jpg"
                 alt="Malloom 1200 DPI 2.4Ghz Wireless Mouse"
                 width="285"
                 height="276"
@@ -187,17 +196,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-4-1x.jpg 1x, ../images/img-4-2x.jpg 2x"
+                srcset="
+                  /src/images/img-4-1x.jpg 1x,
+                  /src/images/img-4-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-4-1x.jpg"
+                src="/src/images/img-4-1x.jpg"
                 alt="Steampunk Anti-Ghosting Mechanical Keyboard"
                 width="285"
                 height="276"
@@ -240,17 +252,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-5-1x.jpg 1x, ../images/img-5-2x.jpg 2x"
+                srcset="
+                  /src/images/img-5-1x.jpg 1x,
+                  /src/images/img-5-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-5-1x.jpg"
+                src="/src/images/img-5-1x.jpg"
                 alt="Xiberia K9 PRO PC Headset"
                 width="285"
                 height="276"
@@ -294,17 +309,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-6-1x.jpg 1x, ../images/img-6-2x.jpg 2x"
+                srcset="
+                  /src/images/img-6-1x.jpg 1x,
+                  /src/images/img-6-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-6-1x.jpg"
+                src="/src/images/img-6-1x.jpg"
                 alt="RGB LED Backlit Mechanical Keyboard"
                 width="285"
                 height="276"
@@ -347,17 +365,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-7-1x.jpg 1x, ../images/img-7-2x.jpg 2x"
+                srcset="
+                  /src/images/img-7-1x.jpg 1x,
+                  /src/images/img-7-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-7-1x.jpg"
+                src="/src/images/img-7-1x.jpg"
                 alt="DARSHION 3200 DPI MZ-17 Gaming Mouse"
                 width="285"
                 height="276"
@@ -400,17 +421,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-8-1x.jpg 1x, ../images/img-8-2x.jpg 2x"
+                srcset="
+                  /src/images/img-8-1x.jpg 1x,
+                  /src/images/img-8-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-8-1x.jpg"
+                src="/src/images/img-8-1x.jpg"
                 alt="K569 RGB LED Backlit Mechanical Keyboard"
                 width="285"
                 height="276"
@@ -453,17 +477,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-9-1x.jpg 1x, ../images/img-9-2x.jpg 2x"
+                srcset="
+                  /src/images/img-9-1x.jpg 1x,
+                  /src/images/img-9-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-9-1x.jpg"
+                src="/src/images/img-9-1x.jpg"
                 alt="Steampunk Anti-Ghosting Mechanical Keyboard"
                 width="285"
                 height="276"
@@ -506,17 +533,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-10-1x.jpg 1x, ../images/img-10-2x.jpg 2x"
+                srcset="
+                  /src/images/img-10-1x.jpg 1x,
+                  /src/images/img-10-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-10-1x.jpg"
+                src="/src/images/img-10-1x.jpg"
                 alt="Wired Gaming Headphones For PS4"
                 width="285"
                 height="276"
@@ -557,17 +587,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-11-1x.jpg 1x, ../images/img-11-2x.jpg 2x"
+                srcset="
+                  /src/images/img-11-1x.jpg 1x,
+                  /src/images/img-11-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-11-1x.jpg"
+                src="/src/images/img-11-1x.jpg"
                 alt="HAVIT USB 3.5mm Gaming Headset"
                 width="285"
                 height="276"
@@ -608,17 +641,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-12-1x.jpg 1x, ../images/img-12-2x.jpg 2x"
+                srcset="
+                  /src/images/img-12-1x.jpg 1x,
+                  /src/images/img-12-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-12-1x.jpg"
+                src="/src/images/img-12-1x.jpg"
                 alt="Somic G936N PS4 Gaming Headset"
                 width="285"
                 height="276"
@@ -659,17 +695,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-13-1x.jpg 1x, ../images/img-13-2x.jpg 2x"
+                srcset="
+                  /src/images/img-13-1x.jpg 1x,
+                  /src/images/img-13-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-13-1x.jpg"
+                src="/src/images/img-13-1x.jpg"
                 alt="AULA SI9006 Gaming Mouse"
                 width="285"
                 height="276"
@@ -713,17 +752,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-14-1x.jpg 1x, ../images/img-14-2x.jpg 2x"
+                srcset="
+                  /src/images/img-14-1x.jpg 1x,
+                  /src/images/img-14-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-14-1x.jpg"
+                src="/src/images/img-14-1x.jpg"
                 alt="HXSJ A903 3200 DPI USB Wired Gaming Mouse"
                 width="285"
                 height="276"
@@ -766,17 +808,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-15-1x.jpg 1x, ../images/img-15-2x.jpg 2x"
+                srcset="
+                  /src/images/img-15-1x.jpg 1x,
+                  /src/images/img-15-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-15-1x.jpg"
+                src="/src/images/img-15-1x.jpg"
                 alt="G95 Light Surround Gaming Headset"
                 width="285"
                 height="276"
@@ -817,17 +862,20 @@
       </li>
 
       <li class="accessories-item">
-        <a class="accessories-link link" href="">
+        <a class="accessories-link link" href="./take-order.html">
           <div class="accessories-item-wrap">
             <picture>
               <source
-                srcset="../images/img-16-1x.jpg 1x, ../images/img-16-2x.jpg 2x"
+                srcset="
+                  /src/images/img-16-1x.jpg 1x,
+                  /src/images/img-16-2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
 
               <img
                 class="accessories-img"
-                src="../images/img-16-1x.jpg"
+                src="/src/images/img-16-1x.jpg"
                 alt="YMDK Double Shot 104 Keyboard"
                 width="285"
                 height="276"
